--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-django==4.0.6
 asgiref==3.5.2
 autopep8==1.6.0
 distlib==0.3.4
 dj-database-url==1.0.0
+Django==4.0.6
 django-cors-headers==3.13.0
 django-heroku==0.3.1
 djangorestframework==3.13.1
@@ -12,7 +12,8 @@ filelock==3.7.1
 gunicorn==20.1.0
 Pillow==9.2.0
 platformdirs==2.5.2
-psycopg2==2.9.3
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pycodestyle==2.8.0
 PyJWT==2.4.0
 pytz==2022.1
