--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ filelock==3.7.1
 gunicorn==20.1.0
 Pillow==9.2.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.5
 pycodestyle==2.8.0
 PyJWT==2.4.0
 pytz==2022.1
